src/objects/MulesoftInternalAuthProvider__mdt.object
<CustomObject>
    <fields>
        <fullName>Authorize_Endpoint_URL_del__c</fullName>
        <label>Authorize Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerSecret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Scopes__c</fullName>
        <label>Default Scopes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Token_Endpoint_URL__c</fullName>
        <label>Token Endpoint URL</label>
        <type>Url</type>
    </fields>
    <label>MulesoftInternalAuthProvider</label>
    <pluralLabel>MulesoftInternalAuthProviders</pluralLabel>
</CustomObject>